Fix deprecated warnings.
Number.valueOf instead of new Number

Change-Id: I7f39a94dc97bb2c1283f2146f1bfef35f2f4996d
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>