@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2017 IBM Corporation and others.
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -384,7 +384,7 @@ public class BuildResults extends AbstractResults {
      */
     void readData(DataInputStream stream) throws IOException {
         long timeBuild = stream.readLong();
-        this.date = new Long(timeBuild).toString();
+        this.date = Long.valueOf(timeBuild).toString();
         byte kind = stream.readByte();
         this.baseline = kind == 0;
         if (this.baseline) {
